# hazelcast-cpp-client

./: CMakeLists.txt  README.md  generateLanguages.sh  releaseLinux.sh  runAllNearCacheCppTests.sh  runAllNearCacheJavaTests.sh  runAllNearCacheTests.sh  runAllNearCacheTests.txt  sonar-project.properties  testLinuxSingleCase.sh  testSonarLinuxSingleCase.sh  testWindowsSingleCase.bat  vcpkg.json
.github/workflows/: nightly-macos-x86_64.yml
docker/: hazelcast-centos.dockerfile
examples/: CMakeLists.txt
examples/CommandLineTool/: CMakeLists.txt
examples/distributed-collections/itemlisteners/: ItemListener.cpp
examples/distributed-map/entry-listener/: main.cpp
examples/distributed-map/entry-processor/: main.cpp
examples/distributed-map/query/: Employee.h  queryExample.cpp
examples/hz_issue/: CMakeLists.txt  README.md  publisher.cpp  subscriber.cpp
examples/issue_900/: CMakeLists.txt  README.md  publisher.cpp  subscriber.cpp
examples/monitoring/cluster/: main.cpp
examples/performance-test/: CMakeLists.txt  MapGet.cpp  MapPut.cpp  README.md  SoakTest.cpp
examples/pipeline/: CMakeLists.txt  PipeliningDemo.cpp  PipeliningLoadTest.cpp
examples/replicated-map/entry-listener/: ListeningReplicatedMap.cpp
examples/serialization/custom/: main.cpp
examples/serialization/identified-data-serializable/: CMakeLists.txt  Member.cpp  main.cpp
examples/serialization/portable/: CMakeLists.txt  Member.cpp  main.cpp
examples/spi/proxy/: CMakeLists.txt  Member.cpp
examples/transactions/transaction-basic/: CMakeLists.txt  TransactionBasic.cpp
hazelcast/src/hazelcast/: Hazelcast.cpp
hazelcast/test/: CMakeLists.txt  SimpleMapTest.h  main.cpp
hazelcast/test/cluster/: MemberAttributeTest.cpp
hazelcast/test/issues/: IssueTest.cpp
hazelcast/test/lock/: ClientLockTest.cpp
java/: pom.xml
python/: hazelcast.py  hz_python_wrapper.cpp  test.py
scripts/: build-linux.sh  build-windows.bat  start-rc.bat  start-rc.sh
swig/: hz.i
(+1674 files in other folders)
